Add unit tests in Db2 Connector.